examples/test/testpolicy18867.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18867
  namespace: namespace239
spec:
  podSelector:
    matchLabels:
      key24: value14
      key26: value35
      key4: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value26
      podSelector:
        matchLabels:
          key44: value0
          key37: value9
          key46: value27
